RESOLVED FIXED314317
Outgoing Google Meet video feed freezes if Safari window is obscured by other window and a Google Meet virtual background image is selected
https://bugs.webkit.org/show_bug.cgi?id=314317
Summary Outgoing Google Meet video feed freezes if Safari window is obscured by other...
youenn fablet
Reported 2026-05-07 05:59:37 PDT
Outgoing Google Meet video feed freezes if Safari window is obscured by other window and a Google Meet virtual background image is selected
Attachments
youenn fablet
Comment 1 2026-05-07 05:59:49 PDT
youenn fablet
Comment 2 2026-05-07 06:14:41 PDT
EWS
Comment 3 2026-05-10 23:45:05 PDT
Committed 312990@main (7931b50704ee): <https://commits.webkit.org/312990@main> Reviewed commits have been landed. Closing PR #64463 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.