Outgoing Google Meet video feed freezes if Safari window is obscured by other window and a Google Meet virtual background image is selected https://bugs.webkit.org/show_bug.cgi?id=314317 rdar://170720729

Reviewed by Eric Carlson.

In case of virtual background, Google Meet is stopping to generate transformed frames when the video element playing the camera stream gets paused, when going in the background.
To prevent this, we add a site-specific quirk, shouldEnableCameraBackgroundPlayback, enabled for meet.google.com, that overrides the EnteringBackground interruption for video elements playing a camera MediaStreamTrack.

* LayoutTests/webrtc/camera-background-playback-quirks-expected.txt: Added.
* LayoutTests/webrtc/camera-background-playback-quirks.html: Added.
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::isCameraTrack):
(WebCore::HTMLMediaElement::shouldOverrideBackgroundPlaybackRestriction const):
* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::shouldEnableCameraBackgroundPlayback const):
(WebCore::handleGoogleQuirks):
* Source/WebCore/page/Quirks.h:
* Source/WebCore/page/QuirksData.h:

Canonical link: https://commits.webkit.org/312990@main